--- a/package.json
+++ b/package.json
@@ -13,14 +13,30 @@
   },
   "dependencies": {
     "@nuxt/content": "^3.8.2",
+    "@vueuse/core": "^14.1.0",
     "better-sqlite3": "^12.5.0",
     "nuxt": "^4.2.1",
     "nuxt-studio": "1.0.0-alpha.2",
+    "reka-ui": "^2.6.1",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^6.2.0",
-    "eslint": "^9.39.1"
+    "@iconify-json/mdi": "^1.2.3",
+    "@stylistic/stylelint-config": "^3.0.1",
+    "@types/node": "^24.10.1",
+    "@unocss/nuxt": "^66.5.10",
+    "@unocss/transformer-directives": "^66.5.10",
+    "@vueuse/nuxt": "^14.1.0",
+    "eslint": "^9.39.1",
+    "sass": "^1.94.2",
+    "stylelint": "^16.26.1",
+    "stylelint-config-css-modules": "^4.5.1",
+    "stylelint-config-recess-order": "^7.4.0",
+    "stylelint-config-recommended-scss": "^16.0.2",
+    "stylelint-config-recommended-vue": "^1.6.1",
+    "stylelint-config-standard-scss": "^16.0.0",
+    "unocss": "^66.5.10"
   }
 }
