--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,5 +46,9 @@
     "vue"
   ],
 
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "i18n-ally.localesPaths": [
+    "i18n",
+    "i18n/locales"
+  ]
 }
