--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^3.8.2",
+    "@nuxtjs/i18n": "^10.2.1",
     "@vueuse/core": "^14.1.0",
     "better-sqlite3": "^12.5.0",
     "nuxt": "^4.2.1",
