--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@nuxtjs/i18n": "^10.2.1",
     "@vueuse/core": "^14.1.0",
     "better-sqlite3": "^12.5.0",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.555.0",
     "nuxt": "^4.2.1",
     "nuxt-studio": "1.0.0-alpha.2",
     "reka-ui": "^2.6.1",
+    "tailwind-merge": "^3.4.0",
+    "vaul-vue": "^0.4.1",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
   },
